<resources>
    <string name="app_name">FoodTruck</string>
    <string name="logo_description">Food truck name</string>
    <string name="show_tracking_menu_item">Show Trackings</string>
    <string name="suggest_now_menu_item">Suggest Now</string>
    <string name="setting_menu_item">Settings</string>


    <string name="add_button">Add</string>
    <string name="edit_button">Edit</string>
    <string name="modify_tracking_title">Modify Tracking</string>
    <string name="trackable_list_title">Trackable List</string>
    <string name="tracking_list_title">Tracking List</string>
    <string name="tracking_name_label">Tracking Name:</string>
    <string name="date_picker_label">Date:</string>
    <string name="time_picker_label">Time:</string>
    <string name="time_slot_spinner_label">Select Time:</string>
    <string name="save_tracking_button">Save</string>

    <string name="location_label">Meet Location: </string>



    <string name="suggestion_setting_label">Suggestion Frequency(sec): </string>
    <string name="remind_before_setting_label">Remind Before(sec): </string>
    <string name="remind_again_setting_label">Remind Again(sec): </string>


    <string name="title_activity_maps">Map</string>

</resources>
