<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".view.ModifyTrackingActivity">

    <TextView
        android:id="@+id/trackable_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin"
        android:textSize="@dimen/text_size"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/label_tracking_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="@dimen/margin"
        android:layout_marginTop="@dimen/margin"
        android:labelFor="@id/input_tracking_name"
        android:text="@string/tracking_name_label"
        android:textSize="@dimen/text_size"
        app:layout_constraintEnd_toStartOf="@+id/input_tracking_name"
        app:layout_constraintTop_toBottomOf="@+id/trackable_name" />

    <TextView
        android:id="@+id/label_date_picker"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="@dimen/margin"
        android:layout_marginTop="@dimen/large_margin"
        android:labelFor="@id/date_picker"
        android:text="@string/date_picker_label"
        android:textSize="@dimen/text_size"
        app:layout_constraintEnd_toStartOf="@+id/date_picker"
        app:layout_constraintTop_toBottomOf="@+id/label_location" />

    <EditText
        android:id="@+id/input_tracking_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="@dimen/margin"
        android:ems="10"
        android:inputType="text"
        app:layout_constraintBaseline_toBaselineOf="@+id/label_tracking_name"
        app:layout_constraintEnd_toEndOf="parent" />

    <EditText
        android:id="@+id/date_picker"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="@dimen/margin"
        android:clickable="true"
        android:ems="10"
        android:focusable="false"
        android:inputType="date"
        app:layout_constraintBaseline_toBaselineOf="@+id/label_date_picker"
        app:layout_constraintEnd_toEndOf="parent" />

    <TextView
        android:id="@+id/label_time_picker"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="@dimen/margin"
        android:layout_marginTop="@dimen/large_margin"
        android:labelFor="@id/time_picker"
        android:text="@string/time_picker_label"
        android:textSize="@dimen/text_size"
        app:layout_constraintEnd_toStartOf="@+id/time_picker"
        app:layout_constraintTop_toBottomOf="@+id/label_date_picker" />

    <EditText
        android:id="@+id/time_picker"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="@dimen/margin"
        android:clickable="true"
        android:ems="10"
        android:focusable="false"
        android:inputType="datetime"
        app:layout_constraintBaseline_toBaselineOf="@+id/label_time_picker"
        app:layout_constraintEnd_toEndOf="parent" />

    <Button
        android:id="@+id/save_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/large_margin"
        android:text="@string/save_tracking_button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/detail" />

    <Spinner
        android:id="@+id/time_slot_spinner"
        android:layout_width="@dimen/input_width"
        android:layout_height="wrap_content"
        android:layout_marginEnd="@dimen/margin"
        app:layout_constraintBaseline_toBaselineOf="@+id/label_time_slot_spinner"
        app:layout_constraintEnd_toEndOf="parent" />

    <TextView
        android:id="@+id/label_time_slot_spinner"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="@dimen/margin"
        android:layout_marginTop="@dimen/large_margin"
        android:text="@string/time_slot_spinner_label"
        android:textSize="@dimen/text_size"
        app:layout_constraintEnd_toStartOf="@+id/time_slot_spinner"
        app:layout_constraintTop_toBottomOf="@+id/label_tracking_name" />

    <TextView
        android:id="@+id/label_location"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="@dimen/margin"
        android:layout_marginTop="@dimen/large_margin"
        android:text="@string/location_label"
        android:textSize="@dimen/text_size"
        app:layout_constraintEnd_toStartOf="@+id/location_text"
        app:layout_constraintTop_toBottomOf="@+id/label_time_slot_spinner" />

    <TextView
        android:id="@+id/location_text"
        android:layout_width="@dimen/input_width"
        android:layout_height="wrap_content"
        android:layout_marginEnd="@dimen/margin"
        android:textSize="@dimen/text_size"
        app:layout_constraintBaseline_toBaselineOf="@+id/label_location"
        app:layout_constraintEnd_toEndOf="parent" />

    <TextView
        android:id="@+id/detail"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/large_margin"
        android:textAlignment="center"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        android:textSize="@dimen/text_size"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/label_time_picker" />


</android.support.constraint.ConstraintLayout>